--- a/src/index.html
+++ b/src/index.html
@@ -27,13 +27,20 @@
 
   </aside>
   <main>
-    <div class="resume">
+    <div class="resume" id="app">
       <section>
-        <h1>姓名</h1>
-        <p class="profile">
-          出生年月|应聘职位|性别|邮箱|手机
-        </p>
+        <h1 class="info">
+          <editable-span :name="resume.name" @edit="onEdit('name', $event)"></editable-span>
+        </h1>
+          <p class="profile">
+            <editable-span :name="resume.birthday" @edit="onEdit('birthday', $event)"></editable-span>
+            | <editable-span :name="resume.jobTitle" @edit="onEdit('jobTitle', $event)"></editable-span>
+            | <editable-span :name="resume.gender" @edit="onEdit('gender', $event)"></editable-span>
+            | <editable-span :name="resume.email" @edit="onEdit('email', $event)"></editable-span>
+            | <editable-span :name="resume.phone" @edit="onEdit('phone', $event)"></editable-span>
+          </p>
       </section>
+
       <section class="skills">
         <h2>技能</h2>
         <ul>
@@ -118,5 +125,8 @@
 
 <script src="../vendors/av-min.js"></script>
 <!--<script src="./js/av.js"></script>-->
+<script src="../vendors/vue.min.js"></script>
+<script src="./js/editable.js"></script>
+<script src="./js/app.js"></script>
 </body>
 </html>
