--- a/src/index.html
+++ b/src/index.html
@@ -1,63 +1,73 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <!--<link rel="stylesheet" href="./css/reset.css">-->
-  <link rel="stylesheet" href="./css/index.css">
-  <title>我的简历</title>
+  <title>简历编辑器</title>
+  <link href="css/index.css" rel="stylesheet"/>
+  <link href="css/resume.css" rel="stylesheet"/>
+  <link href="css/editable-span.css" rel="stylesheet"/>
+  <link href="css/login.css" rel="stylesheet"/>
+  <link href="css/signUp.css" rel="stylesheet"/>
 </head>
 <body>
-<div class="page">
+<div class="page" id="app">
   <aside>
     <div class="upper">
       <ul class="actions">
-        <li><button class="button">保存</button></li>
-        <li><button class="button">分享</button></li>
-        <li><button class="button">打印</button></li>
-        <li><button class="button">换肤</button></li>
+        <li>
+          <button class="button" @click="onClickSave">保存</button>
+        </li>
+        <li>
+          <button class="button">分享</button>
+        </li>
+        <li>
+          <button class="button">打印</button>
+        </li>
+        <li>
+          <button class="button">换肤</button>
+        </li>
       </ul>
     </div>
     <div class="down">
-      <ul>
-        <li><button class="button">登出</button></li>
-      </ul>
+      <button class="button" @click="onLogout">登出</button>
     </div>
-
   </aside>
   <main>
-    <div class="resume" id="app">
-      <section>
-        <h1 class="info">
-          <editable-span :name="resume.name" @edit="onEdit('name', $event)"></editable-span>
+    <div class="resume">
+      <section class="profile">
+        <h1>
+          <editable-span :value="resume.name" @edit="onEdit('name', $event)"></editable-span>
         </h1>
-          <p class="profile">
-            <editable-span :name="resume.birthday" @edit="onEdit('birthday', $event)"></editable-span>
-            | <editable-span :name="resume.jobTitle" @edit="onEdit('jobTitle', $event)"></editable-span>
-            | <editable-span :name="resume.gender" @edit="onEdit('gender', $event)"></editable-span>
-            | <editable-span :name="resume.email" @edit="onEdit('email', $event)"></editable-span>
-            | <editable-span :name="resume.phone" @edit="onEdit('phone', $event)"></editable-span>
-          </p>
+        <p>应聘职位：
+          <editable-span :value="resume.jobTitle" @edit="onEdit('jobTitle', $event)"></editable-span>
+        </p>
+        <p class="profile">
+          <editable-span :value="resume.birthday" @edit="onEdit('birthday', $event)"></editable-span>
+          |
+          <editable-span :value="resume.gender" @edit="onEdit('gender', $event)"></editable-span>
+          |
+          <editable-span :value="resume.email" @edit="onEdit('email', $event)"></editable-span>
+          |
+          <editable-span :value="resume.phone" @edit="onEdit('phone', $event)"></editable-span>
+        </p>
       </section>
-
       <section class="skills">
         <h2>技能</h2>
         <ul>
           <li>
-            <span class="name">静态页面</span>
+            <span class="name"> 静态页面制作 </span>
             <div class="description">完美实现设计稿</div>
           </li>
           <li>
-            <span class="name">静态页面</span>
+            <span class="name"> 静态页面制作 </span>
             <div class="description">完美实现设计稿</div>
           </li>
           <li>
-            <span class="name">静态页面</span>
+            <span class="name"> 静态页面制作 </span>
             <div class="description">完美实现设计稿</div>
           </li>
           <li>
-            <span class="name">静态页面</span>
+            <span class="name"> 静态页面制作 </span>
             <div class="description">完美实现设计稿</div>
           </li>
         </ul>
@@ -69,64 +79,96 @@
             <header>
               <div class="start">
                 <h3 class="name">我的简历</h3>
-                <span class="link">http://xxx/xxx</span>
+                <span class="link">http://xxxx/xxx</span>
               </div>
               <div class="end">
-                <span class="keywords">css3, javascript</span>
+                <span class="keywords">CSS3、jQuery、响应式</span>
               </div>
-
             </header>
-            <p class="description">我是怎么做这个项目的</p>
+            <p class="description">我是怎么做这个项目的我是怎么做这个项目的我是怎么做这个项目的我是怎么做这个项目的我是怎么做这个项目的</p>
           </li>
           <li>
             <header>
               <div class="start">
                 <h3 class="name">我的简历</h3>
-                <span class="link">http://xxx/xxx</span>
+                <span class="link">http://xxxx/xxx</span>
               </div>
               <div class="end">
-                <span class="keywords">css3, javascript</span>
+                <span class="keywords">CSS3、jQuery、响应式</span>
               </div>
-
             </header>
-            <p class="description">我是怎么做这个项目的</p>
+            <p class="description">我是怎么做这个项目的我是怎么做这个项目的我是怎么做这个项目的我是怎么做这个项目的我是怎么做这个项目的</p>
           </li>
           <li>
             <header>
               <div class="start">
                 <h3 class="name">我的简历</h3>
-                <span class="link">http://xxx/xxx</span>
+                <span class="link">http://xxxx/xxx</span>
               </div>
               <div class="end">
-                <span class="keywords">css3, javascript</span>
+                <span class="keywords">CSS3、jQuery、响应式</span>
               </div>
-
             </header>
-            <p class="description">我是怎么做这个项目的</p>
+            <p class="description">我是怎么做这个项目的我是怎么做这个项目的我是怎么做这个项目的我是怎么做这个项目的我是怎么做这个项目的</p>
           </li>
           <li>
             <header>
               <div class="start">
                 <h3 class="name">我的简历</h3>
-                <span class="link">http://xxx/xxx</span>
+                <span class="link">http://xxxx/xxx</span>
               </div>
               <div class="end">
-                <span class="keywords">css3, javascript</span>
+                <span class="keywords">CSS3、jQuery、响应式</span>
               </div>
-
             </header>
-            <p class="description">我是怎么做这个项目的</p>
+            <p class="description">我是怎么做这个项目的我是怎么做这个项目的我是怎么做这个项目的我是怎么做这个项目的我是怎么做这个项目的</p>
           </li>
         </ol>
       </section>
     </div>
   </main>
+  <div v-show="loginVisible" class="login">
+    <form class="form" @submit.prevent="onLogin">
+      <h2>登录</h2>
+      <button @click="loginVisible = false">关闭</button>
+      <div class="row">
+        <label>邮箱</label>
+        <input type="text" v-model="login.email">
+      </div>
+      <div class="row">
+        <label>密码</label>
+        <input type="password" v-model="login.password">
+      </div>
+      <div class="actions">
+        <button type="submit">提交</button>
+        <a href="#" @click="signUpVisible = true; loginVisible = false">注册</a>
+      </div>
+    </form>
+  </div>
+  <div v-show="signUpVisible" class="signUp">
+    <form class="form" @submit.prevent="onSignUp">
+      <h2>注册</h2>
+      <button @click="signUpVisible = false">关闭</button>
+      <div class="row">
+        <label>邮箱</label>
+        <input type="text" v-model="signUp.email">
+      </div>
+      <div class="row">
+        <label>密码</label>
+        <input type="password" v-model="signUp.password">
+      </div>
+      <div class="actions">
+        <button type="submit">提交</button>
+        <a href="#" @click="signUpVisible=false; loginVisible=true;">登录</a>
+      </div>
+    </form>
+  </div>
 </div>
 
 <script src="../vendors/av-min.js"></script>
-<!--<script src="./js/av.js"></script>-->
+<script src="./js/av.js"></script>
 <script src="../vendors/vue.min.js"></script>
-<script src="./js/editable.js"></script>
-<script src="./js/app.js"></script>
+<script src="js/editable-span.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
