--- a/src/index.html
+++ b/src/index.html
@@ -127,7 +127,7 @@
       </section>
     </div>
   </main>
-  <div v-show="loginVisible" class="login">
+  <div v-show="loginVisible" class="login" v-cloak>
     <form class="form" @submit.prevent="onLogin">
       <h2>登录</h2>
       <button @click="loginVisible = false">关闭</button>
@@ -145,7 +145,7 @@
       </div>
     </form>
   </div>
-  <div v-show="signUpVisible" class="signUp">
+  <div v-show="signUpVisible" class="signUp" v-cloak>
     <form class="form" @submit.prevent="onSignUp">
       <h2>注册</h2>
       <button @click="signUpVisible = false">关闭</button>
