--- a/src/index.html
+++ b/src/index.html
@@ -8,17 +8,18 @@
   <link href="css/editable-span.css" rel="stylesheet"/>
   <link href="css/login.css" rel="stylesheet"/>
   <link href="css/signUp.css" rel="stylesheet"/>
+  <link href="css/share.css" rel="stylesheet"/>
 </head>
 <body>
 <div class="page" id="app">
-  <aside>
+  <aside v-show="mode === 'edit'">
     <div class="upper">
       <ul class="actions">
         <li>
           <button class="button" @click="onClickSave">保存</button>
         </li>
         <li>
-          <button class="button">分享</button>
+          <button class="button" @click="shareVisible = true">分享</button>
         </li>
         <li>
           <button class="button">打印</button>
@@ -29,99 +30,69 @@
       </ul>
     </div>
     <div class="down">
-      <button class="button" @click="onLogout">登出</button>
+      <button class="button" @click="onLogout" v-show="hasLogin()">登出</button>
     </div>
   </aside>
   <main>
     <div class="resume">
       <section class="profile">
         <h1>
-          <editable-span :value="resume.name" @edit="onEdit('name', $event)"></editable-span>
+          <editable-span :disabled="mode === 'preview'" :value="displayResume.name" @edit="onEdit('name', $event)"></editable-span>
         </h1>
         <p>应聘职位：
-          <editable-span :value="resume.jobTitle" @edit="onEdit('jobTitle', $event)"></editable-span>
+          <editable-span :disabled="mode === 'preview'" :value="displayResume.jobTitle" @edit="onEdit('jobTitle', $event)"></editable-span>
         </p>
         <p class="profile">
-          <editable-span :value="resume.birthday" @edit="onEdit('birthday', $event)"></editable-span>
+          <editable-span :disabled="mode === 'preview'" :value="displayResume.birthday" @edit="onEdit('birthday', $event)"></editable-span>
           |
-          <editable-span :value="resume.gender" @edit="onEdit('gender', $event)"></editable-span>
+          <editable-span :disabled="mode === 'preview'" :value="displayResume.gender" @edit="onEdit('gender', $event)"></editable-span>
           |
-          <editable-span :value="resume.email" @edit="onEdit('email', $event)"></editable-span>
+          <editable-span :disabled="mode === 'preview'" :value="displayResume.email" @edit="onEdit('email', $event)"></editable-span>
           |
-          <editable-span :value="resume.phone" @edit="onEdit('phone', $event)"></editable-span>
+          <editable-span :disabled="mode === 'preview'" :value="displayResume.phone" @edit="onEdit('phone', $event)"></editable-span>
         </p>
       </section>
       <section class="skills">
         <h2>技能</h2>
         <ul>
-          <li>
-            <span class="name"> 静态页面制作 </span>
-            <div class="description">完美实现设计稿</div>
+          <li v-for="skill,index in displayResume.skills">
+            <editable-span :disabled="mode === 'preview'" class="name" :value="skill.name" @edit="onEdit(`skills[${index}].name`, $event)"></editable-span>
+            <div class="description">
+              <editable-span :disabled="mode === 'preview'" :value="skill.description" @edit="onEdit(`skills[${index}].description`, $event)"></editable-span>
+            </div>
+            <span class="remove" v-if="index>=4 && mode==='edit'" @click="removeSkill(index)">删除</span>
           </li>
-          <li>
-            <span class="name"> 静态页面制作 </span>
-            <div class="description">完美实现设计稿</div>
-          </li>
-          <li>
-            <span class="name"> 静态页面制作 </span>
-            <div class="description">完美实现设计稿</div>
-          </li>
-          <li>
-            <span class="name"> 静态页面制作 </span>
-            <div class="description">完美实现设计稿</div>
+          <li v-if="mode === 'edit'">
+            <span @click="addSkill">添加</span>
           </li>
         </ul>
       </section>
       <section class="projects">
         <h2>项目经历</h2>
         <ol>
-          <li>
+          <li v-for="project,index in displayResume.projects">
             <header>
               <div class="start">
-                <h3 class="name">我的简历</h3>
-                <span class="link">http://xxxx/xxx</span>
+                <h3 class="name">
+                  <editable-span :disabled="mode === 'preview'" :value="project.name" @edit="onEdit(`projects[${index}].name`, $event)"></editable-span>
+                </h3>
+                <span class="link">
+                  <editable-span :disabled="mode === 'preview'" :value="project.link" @edit="onEdit(`projects[${index}].link`, $event)"></editable-span>
+                </span>
               </div>
               <div class="end">
-                <span class="keywords">CSS3、jQuery、响应式</span>
+                <span class="keywords">
+                  <editable-span :disabled="mode === 'preview'" :value="project.keywords" @edit="onEdit(`projects[${index}].keywords`, $event)"></editable-span>
+                </span>
               </div>
             </header>
-            <p class="description">我是怎么做这个项目的我是怎么做这个项目的我是怎么做这个项目的我是怎么做这个项目的我是怎么做这个项目的</p>
+            <p class="description">
+              <editable-span :disabled="mode === 'preview'" :value="project.description" @edit="onEdit(`projects[${index}].description`, $event)"></editable-span>
+            </p>
+            <span class="remove" @click="removeProject(index)" v-if="index>=2 && mode==='edit'">删除</span>
           </li>
-          <li>
-            <header>
-              <div class="start">
-                <h3 class="name">我的简历</h3>
-                <span class="link">http://xxxx/xxx</span>
-              </div>
-              <div class="end">
-                <span class="keywords">CSS3、jQuery、响应式</span>
-              </div>
-            </header>
-            <p class="description">我是怎么做这个项目的我是怎么做这个项目的我是怎么做这个项目的我是怎么做这个项目的我是怎么做这个项目的</p>
-          </li>
-          <li>
-            <header>
-              <div class="start">
-                <h3 class="name">我的简历</h3>
-                <span class="link">http://xxxx/xxx</span>
-              </div>
-              <div class="end">
-                <span class="keywords">CSS3、jQuery、响应式</span>
-              </div>
-            </header>
-            <p class="description">我是怎么做这个项目的我是怎么做这个项目的我是怎么做这个项目的我是怎么做这个项目的我是怎么做这个项目的</p>
-          </li>
-          <li>
-            <header>
-              <div class="start">
-                <h3 class="name">我的简历</h3>
-                <span class="link">http://xxxx/xxx</span>
-              </div>
-              <div class="end">
-                <span class="keywords">CSS3、jQuery、响应式</span>
-              </div>
-            </header>
-            <p class="description">我是怎么做这个项目的我是怎么做这个项目的我是怎么做这个项目的我是怎么做这个项目的我是怎么做这个项目的</p>
+          <li v-if="mode === 'edit'">
+            <span @click="addProject">添加</span>
           </li>
         </ol>
       </section>
@@ -130,7 +101,7 @@
   <div v-show="loginVisible" class="login" v-cloak>
     <form class="form" @submit.prevent="onLogin">
       <h2>登录</h2>
-      <button @click="loginVisible = false">关闭</button>
+      <button type="button" @click="loginVisible = false">关闭</button>
       <div class="row">
         <label>邮箱</label>
         <input type="text" v-model="login.email">
@@ -148,7 +119,7 @@
   <div v-show="signUpVisible" class="signUp" v-cloak>
     <form class="form" @submit.prevent="onSignUp">
       <h2>注册</h2>
-      <button @click="signUpVisible = false">关闭</button>
+      <button type="button" @click="loginVisible = false">关闭</button>
       <div class="row">
         <label>邮箱</label>
         <input type="text" v-model="signUp.email">
@@ -163,6 +134,16 @@
       </div>
     </form>
   </div>
+  <div v-show="shareVisible" class="share" v-cloak>
+    <h2>
+      请将下面链接分享给面试官
+    </h2>
+    <div>
+      <textarea readonly>{{shareLink}}</textarea>
+    </div>
+    <div class="cancel" @click="shareVisible = false">取消</div>
+  </div>
+  <button class="exitPreview" @click="mode = 'edit'" v-if="mode === 'preview'">退出预览</button>
 </div>
 
 <script src="../vendors/av-min.js"></script>
