--- a/src/index.html
+++ b/src/index.html
@@ -2,15 +2,18 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>简历编辑器</title>
+  <title>个人简历</title>
   <link href="css/index.css" rel="stylesheet"/>
-  <link href="css/resume.css" rel="stylesheet"/>
+  <link href="css/themes/default.css" rel="stylesheet"/>
+  <link href="css/themes/dark.css" rel="stylesheet"/>
   <link href="css/editable-span.css" rel="stylesheet"/>
   <link href="css/login.css" rel="stylesheet"/>
   <link href="css/signUp.css" rel="stylesheet"/>
   <link href="css/share.css" rel="stylesheet"/>
+  <link rel="stylesheet" href="css/print.css" media="print">
+  <link rel="stylesheet" href="css/skinPicker.css">
 </head>
-<body>
+<body class="default">
 <div class="page" id="app">
   <aside v-show="mode === 'edit'">
     <div class="upper">
@@ -22,10 +25,10 @@
           <button class="button" @click="shareVisible = true">分享</button>
         </li>
         <li>
-          <button class="button">打印</button>
+          <button class="button" @click="print">打印</button>
         </li>
         <li>
-          <button class="button">换肤</button>
+          <button class="button" @click="skinPickerVisible= !skinPickerVisible">换肤</button>
         </li>
       </ul>
     </div>
@@ -62,7 +65,7 @@
             </div>
             <span class="remove" v-if="index>=4 && mode==='edit'" @click="removeSkill(index)">删除</span>
           </li>
-          <li v-if="mode === 'edit'">
+          <li v-if="mode === 'edit'" class="add">
             <span @click="addSkill">添加</span>
           </li>
         </ul>
@@ -91,7 +94,7 @@
             </p>
             <span class="remove" @click="removeProject(index)" v-if="index>=2 && mode==='edit'">删除</span>
           </li>
-          <li v-if="mode === 'edit'">
+          <li v-if="mode === 'edit'" class="add">
             <span @click="addProject">添加</span>
           </li>
         </ol>
@@ -144,6 +147,11 @@
     <div class="cancel" @click="shareVisible = false">取消</div>
   </div>
   <button class="exitPreview" @click="mode = 'edit'" v-if="mode === 'preview'">退出预览</button>
+  <div v-show="skinPickerVisible" class="skinPicker">
+    <button @click="setTheme('default')">默认</button>
+    <button @click="setTheme('dark')">黑色</button>
+
+  </div>
 </div>
 
 <script src="../vendors/av-min.js"></script>
